More layout tweaks. Stuck on project–all desync bug

--- a/src/style.css
+++ b/src/style.css
@@ -9,10 +9,16 @@ body {
 
 .task-list-container {
     grid-column: 1 / 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .project-list-container {
     grid-column: 2 / 3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .new-task-form {
@@ -23,4 +29,8 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.project-component:hover {
+    text-decoration: underline;
 }
